--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+        "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
